[components] Fix grid blowout issue and various related layout issues

--- a/packages/@sanity/form-builder/src/inputs/ArrayInput/styles/ArrayInput.css
+++ b/packages/@sanity/form-builder/src/inputs/ArrayInput/styles/ArrayInput.css
@@ -18,6 +18,14 @@
   composes: functions from 'part:@sanity/components/fieldsets/default-style';
 }
 
+.list + .functions {
+  margin-top: 0.5rem;
+
+  @media (--screen-medium) {
+    margin-top: 1rem;
+  }
+}
+
 .popupAnchor {
   position: absolute;
   top: 75%;
