[form-builder] Unify button margins in field inputs

--- a/packages/@sanity/google-maps-input/styles/GeopointInput.css
+++ b/packages/@sanity/google-maps-input/styles/GeopointInput.css
@@ -27,9 +27,9 @@
 }
 
 .map + .functions {
-  margin-top: 0.5rem;
+  margin-top: var(--small-padding);
 
   @media (--screen-medium) {
-    margin-top: 1rem;
+    margin-top: var(--medium-padding);
   }
 }
