--- a/packages/@sanity/form-builder/src/inputs/ArrayInput/styles/ArrayInput.css
+++ b/packages/@sanity/form-builder/src/inputs/ArrayInput/styles/ArrayInput.css
@@ -19,10 +19,10 @@
 }
 
 .list + .functions {
-  margin-top: 0.5rem;
+  margin-top: var(--small-padding);
 
   @media (--screen-medium) {
-    margin-top: 1rem;
+    margin-top: var(--medium-padding);
   }
 }
 
