--- a/packages/@sanity/form-builder/src/inputs/ImageInput/styles/ImageInput.css
+++ b/packages/@sanity/form-builder/src/inputs/ImageInput/styles/ImageInput.css
@@ -62,10 +62,10 @@
 }
 
 .content + .functions {
-  margin-top: 0.5rem;
+  margin-top: var(--small-padding);
 
   @media (--screen-medium) {
-    margin-top: 1rem;
+    margin-top: var(--medium-padding);
   }
 }
 
