[form-builder] Unify button margins in field inputs

--- a/packages/@sanity/google-maps-input/styles/GeopointInput.css
+++ b/packages/@sanity/google-maps-input/styles/GeopointInput.css
@@ -20,9 +20,12 @@
 
 .functions {
   composes: functions from 'part:@sanity/components/fieldsets/default-style';
-  padding-top: var(--small-padding);
+}
+
+.map + .functions {
+  margin-top: var(--small-padding);
 
   @media (--screen-medium) {
-    padding-top: var(--medium-padding);
+    margin-top: var(--medium-padding);
   }
 }
