--- a/packages/@sanity/components/src/formfields/styles/DefaultFormField.css
+++ b/packages/@sanity/components/src/formfields/styles/DefaultFormField.css
@@ -84,7 +84,7 @@
 .validationList {
   padding: 0;
 
-  @nest & div[class*="root"] {
+  @nest & div[class*='root'] {
     margin: 0;
     padding: 0;
 
