--- a/packages/@sanity/default-layout/src/components/styles/SearchField.css
+++ b/packages/@sanity/default-layout/src/components/styles/SearchField.css
@@ -161,7 +161,7 @@
 }
 
 .results {
-  composes: shadow-12dp from "part:@sanity/base/theme/shadows-style";
+  composes: shadow-12dp from 'part:@sanity/base/theme/shadows-style';
   display: none;
   position: absolute;
   background: #fff;
