--- a/packages/@sanity/base/src/styles/variables/typography.css
+++ b/packages/@sanity/base/src/styles/variables/typography.css
@@ -12,32 +12,66 @@
   --font-family-serif: Georgia, 'Times New Roman', Times, serif;
   --font-family-monospace: -apple-system-ui-monospace, 'SF Mono', Menlo, Monaco, Consolas, monospace;
   --font-family-base: var(--font-family-sans-serif);
-  --font-size-base: 16px;
-  --font-size-huge: 2rem;
-  --font-size-large: 1.25rem;
-  --font-size-small: 0.875rem;
-  --font-size-xsmall: 0.75rem;
-  --font-size-xsmall--uppercase: calc(11 / 16 * 1rem); /* 11px when base is 16px */
-  --font-size-tiny: 0.625rem;
-  --font-size-base--relative: 1em;
-  --font-size-large--relative: 1.25em;
-  --font-size-xsmall--relative-uppercase: calc(11 / 16 * 1em); /* 11px when base is 16px */
-  --font-size-xsmall--relative: 0.75em;
-  --font-size-tiny--relative: 0.625em;
-  --font-size-h1: 2rem;
-  --font-size-h2: 1.75rem;
-  --font-size-h3: 1.5rem;
-  --font-size-h4: 1.25rem;
-  --font-size-h5: var(--font-size-base);
-  --font-size-h6: 0.875rem;
-  --line-height-base: 1.5;
+
+  /* Huge */
+  --font-size-huge: 1.3125rem; /* 21px */
+  --line-height-huge: calc(28 / 21); /* 28px */
+
+  /* Large */
+  --font-size-large: 1.125rem; /* 18px */
+  --line-height-large: calc(24 / 18); /* 24px */
+  --font-size-large--relative: 1.125em; /* @todo: deprecate */
+
+  /* Base */
+  --font-size-base: 1rem; /* 16px */
+  --line-height-base: calc(20 / 16); /* 20px */
+  --font-size-base--relative: 1em; /* @todo: deprecate */
+
+  /* Small */
+  --font-size-small: 0.8125rem; /* 13px */
+  --line-height-small: calc(16 / 13); /* 16px */
+
+  /* Xsmall */
+  --font-size-xsmall: 0.625rem; /* 10px */
+  --line-height-xsmall: calc(12 / 10); /* 12px */
+  --font-size-xsmall--relative: 0.625em; /* @todo: deprecate */
+
+  /* Xsmall (uppercase) */
+  --font-size-xsmall--uppercase: 0.6875rem; /* 11px */
+  --line-height-xsmall--uppercase: calc(12 / 10); /* 12px */
+  --font-size-xsmall--relative-uppercase: 0.6875em; /* @todo: deprecate */
+
+  /* Tiny */
+  --font-size-tiny: 0.625rem; /* 10px */
+  --line-height-tiny: calc(12 / 10); /* 12px */
+  --font-size-tiny--relative: 0.625em; /* @todo: deprecate */
+
+  /* Heading 1 */
+  --font-size-h1: 2.0625rem;
+
+  /* Heading 2 */
+  --font-size-h2: 1.6875rem;
+
+  /* Heading 3 */
+  --font-size-h3: 1.3125rem;
+
+  /* Heading 4 */
+  --font-size-h4: var(--font-size-base);
+
+  /* Heading 5 */
+  --font-size-h5: 0.8125rem;
+
+  /* Heading 6 */
+  --font-size-h6: 0.8125rem;
+
+  /* Misc */
   --line-height-computed: calc(var(--font-size-base) * var(--line-height-base));
   --headings-font-family: inherit;
   --headings-font-weight: 700;
-  --headings-line-height: 1.1em;
+  --headings-line-height: 1.1;
   --headings-color: inherit;
   --blockquote-color: var(--gray);
-  --blockquote-font-size: 1.25em;
+  --blockquote-font-size: 1.125rem;
   --blockquote-border-color: var(--gray-light);
   --blockquote-small-color: var(--gray-light);
   --page-header-border-color: var(--gray-lighter);
