--- a/packages/@sanity/form-builder/src/inputs/ArrayInput/styles/ArrayInput.css
+++ b/packages/@sanity/form-builder/src/inputs/ArrayInput/styles/ArrayInput.css
@@ -3,6 +3,17 @@
 .root {
   display: block;
   position: relative;
+  box-shadow: inset 0 0 0 1px var(--hairline-color);
+}
+
+.listContainer {
+  padding: var(--small-padding);
+  padding-bottom: 0;
+
+  @media (--screen-medium) {
+    padding: var(--medium-padding);
+    padding-bottom: 0;
+  }
 }
 
 .list {
@@ -16,15 +27,20 @@
 
 .functions {
   composes: functions from 'part:@sanity/components/fieldsets/default-style';
+  padding: var(--small-padding);
+
+  @media (--screen-medium) {
+    padding: var(--medium-padding);
+  }
 }
 
-.list + .functions {
+/* .list + .functions {
   margin-top: var(--small-padding);
 
   @media (--screen-medium) {
     margin-top: var(--medium-padding);
   }
-}
+} */
 
 .popupAnchor {
   position: absolute;
