--- a/packages/@sanity/form-builder/src/inputs/ArrayOfPrimitivesInput/styles/ArrayOfPrimitivesInput.css
+++ b/packages/@sanity/form-builder/src/inputs/ArrayOfPrimitivesInput/styles/ArrayOfPrimitivesInput.css
@@ -2,6 +2,17 @@
 
 .root {
   display: block;
+  box-shadow: inset 0 0 0 1px var(--hairline-color);
+}
+
+.listContainer {
+  padding: var(--small-padding);
+  padding-bottom: 0;
+
+  @media (--screen-medium) {
+    padding: var(--medium-padding);
+    padding-bottom: 0;
+  }
 }
 
 .list {
@@ -40,10 +51,10 @@
   composes: functions from 'part:@sanity/components/fieldsets/default-style';
 }
 
-.list + .functions {
+/* .list + .functions {
   margin-top: var(--small-padding);
 
   @media (--screen-medium) {
     margin-top: var(--medium-padding);
   }
-}
+} */
