--- a/packages/@sanity/form-builder/src/inputs/OptionsArrayInput/styles/OptionsArrayInput.css
+++ b/packages/@sanity/form-builder/src/inputs/OptionsArrayInput/styles/OptionsArrayInput.css
@@ -1,3 +1,15 @@
+@import 'part:@sanity/base/theme/variables-style';
+
+.root {
+  display: block;
+  box-shadow: inset 0 0 0 1px var(--hairline-color);
+  padding: var(--small-padding);
+
+  @media (--screen-medium) {
+    padding: var(--medium-padding);
+  }
+}
+
 .error {
   font-size: 0.8rem;
   padding: 1em;
